Fix overflow on wave element

--- a/www/templates/iframe/less/iframe.less
+++ b/www/templates/iframe/less/iframe.less
@@ -355,6 +355,10 @@
         background-color: #000;
     }
 
+    .vjs-wavesurfer wave {
+        overflow: hidden !important;
+    }
+
     @media (max-width: 480px) {
         .share-video-form {
             width: 70%;
